--- a/index.html
+++ b/index.html
@@ -3,29 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Inspired.Get</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body id="body">
-	<div class="clock">
-		<iframe src="assets/SVGDigitalClock.svg" width="300" height="200"> </iframe>
+	<div class="container">
+		<div class="row">
+			<div class="clock col-sm-5">
+				<iframe src="assets/SVGDigitalClock.svg" width="300" height="200"> </iframe>
+			</div>
+			<div class="col-sm-7" id="weather">
+				<!-- <iframe src="https://weatherfor.us/widget?" scrolling="no" frameborder="0" allowtransparency="true" style="background: transparent; width: 720px; height: 250px; overflow: hidden;"></iframe> -->
+				Weather
+			</div>
+		</div>
+		<div id="quote">
+			The Quote
+		</div>
+
+		<div id="todo">
+			<form onsubmit=""></form>
+			A Todo List
+		</div>
+
+
+
 	</div>
-	<div id="weather">
-		<iframe src="https://weatherfor.us/widget?" scrolling="no" frameborder="0" allowtransparency="true" style="background: transparent; width: 720px; height: 250px; overflow: hidden;"></iframe>
-	</div>
-
-	<div id="quote">
-		The Quote
-	</div>
-
-	<div id="todo">
-		<form onsubmit=""></form>
-		A Todo List
-	</div>
-
-
-
-
 	<script>
 		!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "https://weatherwidget.io/js/widget.min.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "weatherwidget-io-js");
 	</script>
