--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 			<div class="col-sm-7" id="weather">
 				<!-- <iframe src="https://weatherfor.us/widget?" scrolling="no" frameborder="0" allowtransparency="true" style="background: transparent; width: 720px; height: 250px; overflow: hidden;"></iframe> -->
 				Weather
+
 			</div>
 		</div>
 		<div id="quote">
 			The Quote
+			
 		</div>
 
 		<div id="todo">
@@ -31,9 +33,9 @@
 
 
 	</div>
-	<script>
+	<!-- <script>
 		!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "https://weatherwidget.io/js/widget.min.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "weatherwidget-io-js");
-	</script>
+	</script> -->
 	<!--JS Libraries-->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<!--Services-->
