--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
 			<div id="quote">
 			</div>
 		</div>
-		<div id="todo">
-			<form onsubmit=""></form>
-			A Todo List
-		</div>
+		<form class="form" onsubmit="app.controllers.todoController.addTodoFromForm(event)" id="formId">
+			<div id="counter">
+			</div>
+			<div class="form-group">
+				<label for="todoInput">To-Do</label>
+				<input type="text" name="newItem" class="form-control">
+			</div>
+			<div class="form-group">
+				<button type="submit" class="btn btn-success">Add</button>
+			</div>
+		</form>
+
+		<div class="row" id="todo"></div>
+	</div>
+
+
 	</div>
 	<!--JS Libraries-->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
