--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
 			<div id="quote">
 			</div>
 		</div>
-		<form class="form" onsubmit="app.controllers.todoController.addTodoFromForm(event)" id="formId">
+		<form class="form" onsubmit="app.controllers.todoCtrl.addTodoFromForm(event)" id="formId">
 			<div id="counter">
 			</div>
 			<div class="form-group">
 				<label for="todoInput">To-Do</label>
 				<input type="text" name="newItem" class="form-control">
 			</div>
-			<div class="form-group">
 				<button type="submit" class="btn btn-success">Add</button>
-			</div>
 		</form>
 
 		<div class="row" id="todo"></div>
